--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -18,6 +18,10 @@ input[type=submit]:hover {
   padding: 50px;
 }
 
+middle {
+  border-radius: 5px;
+  padding: 50px;
+}
 
 p {
   padding: 16px;
@@ -36,14 +40,6 @@ p {
 
 
 
-
-.listImage {
-  background-image: url("https://i.postimg.cc/j22QP8Y8/library.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-
 .bookBorder {
   margin-left: 5px;
   margin-right: 5px;
@@ -52,19 +48,24 @@ p {
 }
 
 .blist {
-  /* list-style-position: inside;
+  list-style-position: inside;
 
   margin-top: 6px;
   margin-bottom: 6px;
   
-  
-  padding-top: 6px;
-  padding-bottom: 6px; */
-  
   text-align: center;
-  border-radius: 4px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   
 }
+
+/* .search {
+  position: relative;
+  text-align: center;
+  float: right;
+  cursor: pointer;
+  margin-left: 10%;
+} */
 
 
 #bookSearchButton {
