--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -89,7 +89,7 @@ p {
 
 .backGround {
   /* The image used */
-  background-image: url('src/assets/img/book.jpg');
+  background-image: url('src/assets/img/book.png');
 
   /* Full height */
   height: 100%; 
