/download bug fixed

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -18,7 +18,7 @@
             <div *ngIf= "book_name != null">
                 <p> Your searched book :</p>
                 <p>
-                    {{book_name}}  <button (click)=download_a_book(book_list[0]) class="fa fa-download"></button>
+                    {{book_name}}  <button (click)=download_a_book(book_name) class="fa fa-download"></button>
                 </p>
               </div>
 
