--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -53,7 +53,7 @@
           <a href="https://github.com/alialmashhadani89">
               <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>
-          <a href="https://github.com/alialmashhadani89/Resume/blob/master/Ali%20Almashhadani%20Resume%202019-6-8.pdf">
+          <a href="https://github.com/alialmashhadani89/Resume/blob/master/Ali_Almashhadani_Resume.pdf">
             <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>   
     
